force-app/main/default/objects/Account/fields/External_ERP_Sync_Hash__c.field-meta.xml
<CustomField>
  <fullName>External_ERP_Sync_Hash__c</fullName>
  <description>Stores the SHA-256 hash from the external Oracle ERP system to prevent cyclic updates.</description>
  <label>External ERP Sync Hash</label>
  <length>255</length>
  <required>true</required>
  <type>Text</type>
</CustomField>