force-app/main/default/objects/Account/fields/Jataka_Healer_Probe__c.field-meta.xml
<CustomField>
  <fullName>Jataka_Healer_Probe__c</fullName>
  <label>Jataka Healer Probe</label>
  <length>50</length>
  <required>true</required>
  <type>Text</type>
</CustomField>