force-app/main/default/objects/Account/fields/Jataka_Region__c.field-meta.xml
<CustomField>
  <fullName>Jataka_Region__c</fullName>
  <label>Jataka Region</label>
  <length>50</length>
  <required>true</required>
  <type>Text</type>
</CustomField>