force-app/main/default/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
  <fullName>SLA__c</fullName>
  <description>Required SLA field used for try_payload happy-path test setup.</description>
  <label>SLA</label>
  <length>50</length>
  <required>true</required>
  <type>Text</type>
</CustomField>