force-app/main/default/objects/Account/fields/Test1_Required_SLA__c.field-meta.xml
<CustomField>
  <fullName>Test1_Required_SLA__c</fullName>
  <description>Required Account field used for try_payload happy-path test setup.</description>
  <label>Test1 Required SLA</label>
  <length>50</length>
  <required>true</required>
  <type>Text</type>
</CustomField>