force-app/main/default/objects/Account/validationRules/Website_Required_For_Tech_Partners.validationRule-meta.xml
<ValidationRule>
    <fullName>Website_Required_For_Tech_Partners</fullName>
    <active>true</active>
    <description>Business Rule: Ensures that any account marked as a Technology Partner has a website.</description>
    <errorConditionFormula>ISPICKVAL(Type, 'Technology Partner') &amp;&amp; ISBLANK(Website)</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>All Technology Partners must have a valid Website URL.</errorMessage>
</ValidationRule>